# ziloo

./: CASING.md  CHANGELOG.md  CURRENT.UF2  DEVELOP.md  README.md
Brain/: CONTROLLER.md  Dockerfile  EXTENSIONS.md  FIRMWARE.md  STEM.md  SUBSYSTEMS.md  Upwork.md  docker-compose.yaml
Brain/Subcognition/: .dockerignore  BUILD.md  Cargo.toml  Dockerfile
Brain/Subcognition/.cargo/: config.toml
Brain/home/: working-directory
Brain/tools/docker/: README.md
Camera/: CAMERA.md  H511895c4bbd54277afa763262769fc805.jpg.jp2  HTB10.gQaRWD3KVjSZKPq6yp7FXaS.jpg.jp2  HTB1BMsQaR1D3KVjSZFyq6zuFpXaQ.jpg.jp2  HTB1i.QYbl1D3KVjSZFyq6zuFpXaE.jpg.jp2  HTB1wTy4cXHM8KJjSZJiq6zx3FXaQ.jpg.jp2  He048fec4a9d740649ef1fdbf710e01beA.jpg.jp2
Casing/: RESIN.md
Face/: CONTROLLER.md  K210_CONNECT.md  LENSE.md  SENSORS.md
Hub/: BOM.md  BUS.md  CONNECTORS.md  ESP32_LCD.md  HUB_BOARD.md  LCD.md  MANUFACTURE.md  NFC.md  RASPBERRY_PI.md  STEM.md  USB.md  Upwork.md
Power/: BATTERY.md  BOTTOM_BOARD.md  CONNECTORS.md  README.md  SIBLING_BOARD.md  SLIDE-IN_BOARD.md  Upwork.md
