[package]
name = "subcognition"
version = "0.1.0"
authors = ["Henrik Vendelbo <henrik@thepia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["staticlib"]

[dependencies]
opencv = "0.46.3" # "0.53.0"
# toml = "0.5"
# async-trait = "0.1"
# reqwest = { version = "0.11", default-features = false, features = ["json"] }
# futures = "0.3"
# itertools = "0.10"

# [profile.release]
# opt-level = 'z'
# lto = true
# codegen-units = 1